--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -45,7 +45,7 @@
 
 .card h2 {
   margin: 0;
-  color: #958d8d;
+  color: #ccc;
   font-weight: normal;
 }
 
@@ -56,18 +56,16 @@
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
-  right: auto;
-  bottom: auto;
   transform: translate(-50%, -50%);
-  background: white;
+  background-color: white;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000; /* Certifique-se de que o z-index seja alto para ficar acima de outros elementos */
   width: 80%;
-  max-width: 500px;
+  max-width: 600px;
   text-align: center;
 }
 
@@ -75,9 +73,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* Semitransparente */
+  z-index: 999; /* Certifique-se de que o overlay tenha z-index maior que os cards, mas menor que o modal */
 }
 
 .itemList {
@@ -162,4 +161,21 @@
     padding: 10px;
     font-size: 0.9rem;
   }
+
+  .logoutButton {
+    background-color: #d9534f;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .logoutButton:hover {
+    background-color: #c9302c;
+  }
+  
 }
