--- a/src/styles/cadastroUsuario.module.css
+++ b/src/styles/cadastroUsuario.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -5,6 +7,7 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins', sans-serif;
   }
   
   .title {
